# skyhookdm-py

./: .flake8  .gitattributes  README.md  pyproject.toml
examples/: read-arrow-file  read-skyhook-file  skyhook-load-from-arrow-file
examples/interfaces/: query-lifetime
partitioner/: README.md  main.py  main2.py  reader.py
partitioner/core/: bucket_map.py  csv_reader.py  file_reader.py  hash.py  writer.py
partitioner/experimental/: bucket_map.py  main.py  pq_writer.py
partitioner/rados/: pq_sender.py
partitioner/tests/: 100-row-stripped.csv  bad.csv  row_test.py  rw_test.py
resources/: example.arrow  example.skyhook
skyhookdm/: __init__.py  connectors.py  dataformats.py  parsers.py  query_interface.py  skyhook.py  util.py
skyhookdm/Query/: parser.py  query.py  skyhook.py
skyhookdm/Tables/: Record.py  Table.py
skyhookdm/query/: engines.py  models.py  parsers.py
skyhookdm/sql/: parser.py  query.py  skyhook.py
tests/: test_query.py  test_skyhookdm.py
toolbox/: arrow-edit  arrow-less  convert-file-format  rados-write  run-query  skyhook-less
