[tool.poetry]
name = "skyhookdm"
version = "0.1.0"
description = "A python client for the SkyhookDM data management system over the Ceph object storage system"
authors = ["Your Name <you@example.com>"]
license = "LGPL-2.1-only"

[tool.poetry.dependencies]
python = "^3.6.9"
pyarrow = "^0.15"
flatbuffers = "^1.11"
pandas = "^1.0.4"
popper = "^2.6.0"
sqlparse = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
